--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,9 @@
+allure-pytest==2.13.5
+allure-python-commons==2.13.5
 attrs==23.2.0
+by==0.0.4
 certifi==2024.2.2
+charset-normalizer==3.3.2
 exceptiongroup==1.2.0
 Faker==22.7.0
 h11==0.14.0
@@ -12,6 +16,7 @@ py==1.11.0
 PySocks==1.7.1
 pytest==7.1.1
 python-dateutil==2.8.2
+requests==2.31.0
 selenium==4.17.2
 six==1.16.0
 sniffio==1.3.0
@@ -22,4 +27,3 @@ trio-websocket==0.11.1
 typing_extensions==4.9.0
 urllib3==2.2.0
 wsproto==1.2.0
-requests==2.31.0
